<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/xxxhdpi"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/etToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/token"
                android:inputType="text"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:textColor="#FFFDD0"
                android:background="#B28400"
                android:layout_marginTop="24dp"/>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/footer_navigation"
        layout="@layout/footer_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
