<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.RegisterFragment"
    android:background="#FFC107">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/xxxhdpi"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_margin="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@color/black"
                android:backgroundTint="@color/black"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@color/black"
                android:backgroundTint="@color/black"
                android:autofillHints="" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@color/black"
                android:backgroundTint="@color/black"
                android:autofillHints="" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:backgroundTint="@color/black"
                android:textColor="#FFC107"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_prompt"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
