<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107">

    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/footer_navigation"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/xxxhdpi"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColorHint="#737373"
                android:textColor="#000000"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#B28400"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pwd"
                android:textColorHint="#737373"
                android:textColor="#000000"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#B28400"/>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pwd"
                android:textColor="#737373"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:gravity="end"/>

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FFFDD0"
                android:background="#000000"
                android:layout_marginTop="24dp"/>
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_prompt"
                android:textColor="#737373"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/footer_navigation"
        layout="@layout/footer_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>


