<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.UpdateTransactionFragment"
    android:background="#FFC107">
    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <RadioGroup
        android:id="@+id/rgUpdateBuySell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <RadioButton
            android:id="@+id/rbUpdateBuy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buy"
            android:button="@null"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:background="@drawable/selected_radiobutton_background"
            android:checked="true" />
        <RadioButton
            android:id="@+id/rbUpdateSell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sell"
            android:button="@null"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:background="@drawable/default_radiobutton_background" />
    </RadioGroup>
    <EditText
        android:id="@+id/etUpdateDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/rgUpdateBuySell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:autofillHints="" />
    <EditText
        android:id="@+id/etUpdateAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:autofillHints="" />
    <EditText
        android:id="@+id/etUpdatePrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/etUpdateAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:backgroundTint="@color/black"
        android:autofillHints="" />
    <Button
        android:id="@+id/btnUpdateTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_transaction"
        android:backgroundTint="@color/black"
        android:textColor="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
