<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ResetPasswordFragment"
    android:background="#FFC107">
    <include
        android:id="@+id/header"
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/xxxhdpi"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="16dp">
            <EditText
                android:id="@+id/etToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/token"
                android:inputType="text"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@android:color/darker_gray"
                android:backgroundTint="@color/black"
                android:autofillHints="" />
            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pwd"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@android:color/darker_gray"
                android:backgroundTint="@color/black"
                android:autofillHints="" />
            <EditText
                android:id="@+id/etConfirmNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pwd"
                android:inputType="textPassword"
                android:layout_marginTop="16dp"
                android:layout_margin="16dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textColorHighlight="@android:color/darker_gray"
                android:backgroundTint="@color/black"
                android:autofillHints="" />
            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_pwd"
                android:backgroundTint="@color/black"
                android:textColor="#FFC107"
                android:layout_margin="16dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
