<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AddAssetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFC107"
        tools:ignore="UselessParent">

        <include
            android:id="@+id/header"
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rgBuySell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/header"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/btnBuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy"
                android:button="@null"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <RadioButton
                android:id="@+id/btnSell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sell"
                android:button="@null"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/rgBuySell"
            android:padding="72dp">

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/quantity"
                android:inputType="numberDecimal"
                android:gravity="center"/>

            <EditText
                android:id="@+id/etPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:layout_marginStart="16dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:layout_marginBottom="595dp"
            android:backgroundTint="@color/black"
            android:textColor="#FFC107"
            android:text="@string/add_txn" />
    </RelativeLayout>

</FrameLayout>